--- a/FinalProject/finalProject.html
+++ b/FinalProject/finalProject.html
@@ -6,15 +6,18 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Perfectly Portioned Fitness</h1>
+        <div class="banner">
+            <h1>Perfectly Portioned Fitness</h1>
 
-        <h2>Build your meal plan</h2>
+            <h2>Build your meal plan</h2>
+        </div>
+        
 
         <form id="mealPlanForm">
-            <input type="button" id="generateMealPlanBtn" value="Generate meal plan"></input>
+            <input type="button" id="generateMealPlanBtn" value="Generate meal plan">
+            <input type="button" id="downloadFormBtn" value="Download Form">
+            <input type="button" id="clearFormBtn" value="Clear">
         </form>
-
-
         <script src="projectJS.js"></script>
     </body>
 </html>
