--- a/FinalProject/finalProject.html
+++ b/FinalProject/finalProject.html
@@ -7,9 +7,7 @@
     </head>
     <body>
         <div class="banner">
-            <h1>Perfectly Portioned Fitness</h1>
-            <p>WEB-115, Section: 0001</p>
-            <h2>Build your meal plan</h2>
+            <img src="Banner.png">
         </div>
         
 
@@ -27,19 +25,19 @@
         <h3>Meal Plan for the Week</h3>
 
         <label for="breakfast">Breakfast:</label>
-        <input type="text" id="breakfast" name="breakfast">
+        <input type="text" id="breakfast" name="breakfast"><br>
 
         <label for="snack1">Snack1:</label>
-        <input type="text" id="snack1" name="snack1">
+        <input type="text" id="snack1" name="snack1"><br>
 
         <label for="lunch">Lunch:</label>
-        <input type="text" id="lunch" name="lunch">
+        <input type="text" id="lunch" name="lunch"><br>
 
         <label for="snack2">Snack2:</label>
-        <input type="text" id="snack2" name="snack2">
+        <input type="text" id="snack2" name="snack2"><br>
 
         <label for="dinner">Dinner:</label>
-        <input type="text" id="dinner" name="dinner">
+        <input type="text" id="dinner" name="dinner"><br>
 
             <input type="button" id="generateMealPlanBtn" value="Generate meal plan">
             <input type="button" id="printFormBtn" value="Print Form">
